[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/WinScreen/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TitleScreen/START-H.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TitleScreen/START.png" type="Texture" id=11]

[node name="WinScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 484.634
margin_top = 365.737
margin_right = 524.634
margin_bottom = 379.737
text = "99999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBtn" type="TextureButton" parent="."]
margin_left = 794.455
margin_top = 215.575
margin_right = 1178.46
margin_bottom = 276.575
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
